--- a/src/main/resources/templates/admin/cs/notice/view.html
+++ b/src/main/resources/templates/admin/cs/notice/view.html
@@ -19,36 +19,34 @@
       <p>HOME > 고객센터 > 공지사항</p>
     </div>
     <article class="qna_article_write">
-      <form>
-        <table>
-          <tr>
-            <td>유형</td>
-            <td th:text="${notice.type1}">고객서비스</td>
-          </tr>
-          <tr>
-            <td>제목</td>
-            <td th:text="${notice.title}">[안내] 해외결제 사칭 문자 주의</td>
-          </tr>
-          <tr>
-            <td>내용</td>
-            <td>
+      <table>
+        <tr>
+          <td>유형</td>
+          <td th:text="${notice.type1}">고객서비스</td>
+        </tr>
+        <tr>
+          <td>제목</td>
+          <td th:text="${notice.title}">[안내] 해외결제 사칭 문자 주의</td>
+        </tr>
+        <tr>
+          <td>내용</td>
+          <td>
               <textarea class="notice_view_content" name="qnaContent" placeholder="공지사항내용출력." readonly
                         th:text="${notice.content}"></textarea>
-            </td>
-          </tr>
-        </table>
-        <div style="text-align: center; margin-top: 50px">
-          <a th:href="@{/admin/cs/notice/delete(id=${notice.id})}">
-            <input type="button" value="삭제" style="background-color: #9e9e9e; color: white; border: none; padding: 10px 20px; cursor: pointer;"/>
-          </a>
-          <a th:href="@{/admin/cs/notice/modify(id=${notice.id})}">
-            <input type="button" value="수정" style="background-color: #9e9e9e; color: white; border: none; padding: 10px 20px; cursor: pointer;"/>
-          </a>
-          <a th:href="@{/admin/cs/notice/list}">
-            <input type="button" value="목록" style="background-color: #4291e9; color: white; border: none; padding: 10px 20px; cursor: pointer;"/>
-          </a>
-        </div>
-      </form>
+          </td>
+        </tr>
+      </table>
+      <div style="text-align: center; margin-top: 50px">
+        <input type="button" value="삭제" style="background-color: #9e9e9e; color: white; border: none; padding: 10px 20px; cursor: pointer;"
+               th:onclick="|deleteNotice(${notice.id})|" />
+        <a th:href="@{/admin/cs/notice/modify(id=${notice.id})}">
+          <input type="button" value="수정" style="background-color: #9e9e9e; color: white; border: none; padding: 10px 20px; cursor: pointer;" />
+        </a>
+        <a th:href="@{/admin/cs/notice/list}">
+          <input type="button" value="목록" style="background-color: #4291e9; color: white; border: none; padding: 10px 20px; cursor: pointer;" />
+        </a>
+
+        <script src="/js/admin/cs/noticedelete.js"></script>
     </article>
   </div>
 </div>
