--- a/src/main/resources/static/css/my/modal.css
+++ b/src/main/resources/static/css/my/modal.css
@@ -96,6 +96,7 @@
     height: 850px;
     width: 700px;
 }
+.couponinfoModal-content,
 .deliberyinsertModal-content,
 .deliberyModal-content{
     width : 600px;
