--- a/src/main/resources/templates/product/complete.html
+++ b/src/main/resources/templates/product/complete.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="/css/product/product.css" />
 
 <!-- 결제완료 페이지 시작 -->
-<section class="complete section" layout:fragment="content">
+<section class="complete section">
   <script>
     window.onload = function () {
       const totalCost = document.getElementById("allCost");
