--- a/src/main/resources/templates/product/cart.html
+++ b/src/main/resources/templates/product/cart.html
@@ -21,6 +21,7 @@
 
 <!-- index.html 고유 스크립트 추가 -->
 <th:block layout:fragment="script">
+  <script type="text/javascript" th:src="@{/js/product/cart.js}"></script>
 </th:block>
 
 <section class="section cart" layout:fragment="content">
@@ -58,48 +59,57 @@
         </tr>
         </thead>
         <tbody>
-          <tr th:each="cart : ${cartItems}" class="product-item">
-            <td><input type="checkbox" name="selectedCart" onclick="calculateTotalPrice()"></td>
-            <td class="product-details">
-              <a href="#" class="product-image">
-                <img th:src="'/'+${appInfo.uploadDir}+'product/'+${cart.product.productImg1}" alt="상품 이미지">
-              </a>
-              <div class="product-info">
-                <p><a href="#">[[${cart.product.productName}]]</a></p>
-                <p class="product-options">옵션: 상품 설명 또는 옵션</p>
-              </div>
-            </td>
-            <td>[[${cart.quantity}]]</td>
-            <td>[[${cart.product.price}]]원</td>
-            <td>[[${cart.product.discountRate}]]%</td>
-            <td>[[${cart.product.point}]]</td>
-            <th:block th:if="${cart.product.deliveryFee} > 0">
-              <td>[[${cart.product.deliveryFee}]]</td>
-            </th:block>
-            <th:block th:unless="${cart.product.deliveryFee} > 0">
-              <td>무료</td>
-            </th:block>
-            <td>[[${cart.totalPrice}]]원</td>
-          </tr>
-        </tbody>
+
+        <tr th:each="cart : ${cartItems}" class="product-item">
+          <td><input type="checkbox" name="selectedCart"  th:value="${cart.id}" onclick="calculateTotalPrice()"
+                     th:data-quantity="${cart.quantity}"  th:data-price="${cart.product.price}"  th:data-discount="${cart.product.discountRate}"
+                     th:data-delivery="${cart.product.deliveryFee}"  th:data-point="${cart.product.point}"  th:data-total="${cart.totalPrice}"></td>
+          <input type="hidden" th:value="${cart.product.id}"/>
+          <td class="product-details">
+            <a href="#" class="product-image">
+              <img th:src="'/'+${appInfo.uploadDir}+'product/'+${cart.product.productImg1}" alt="상품 이미지">
+            </a>
+            <div class="product-info">
+              <p><a href="#">[[${cart.product.productName}]]</a></p>
+              <p id="product-options" class="product-options"> [[${cart.formattedOptions}]]</p>
+            </div>
+          </td>
+          <td>[[${cart.quantity}]]</td>
+          <td>[[${cart.product.price}]]원</td>
+          <td>[[${cart.product.discountRate}]]%</td>
+          <td>[[${cart.product.point}]]</td>
+          <th:block th:if="${cart.product.deliveryFee} > 0">
+            <td>[[${cart.product.deliveryFee}]]</td>
+          </th:block>
+          <th:block th:unless="${cart.product.deliveryFee} > 0">
+            <td>무료</td>
+          </th:block>
+          <td>[[${cart.totalPrice}]]원</td>
+
+          <input type="hidden" th:value="${cart.product.getDescription()}"/>
+          <input type="hidden" th:value="${cart.getProductOptionCombination()}"/>
+          <input type="hidden" th:value="${cart.getFormattedOptions()}"/>
+
+        </tr>
       </table>
     </div>
 
     <!-- 우측: 결제 정보 영역 -->
+    <!-- 결제 예정 금액 표시 영역 -->
     <div class="total">
       <h2 class="total__head">결제 예정 금액</h2>
       <table class="total__table">
         <tr class="total__tr">
           <td>상품수</td>
-          <td id="prodCount">1</td>
+          <td id="prodCount">0</td>
         </tr>
         <tr class="total__tr">
           <td>상품금액</td>
-          <td id="prodOrgPrice">27,000원</td>
+          <td id="prodOrgPrice">0원</td>
         </tr>
         <tr class="total__tr">
           <td>할인금액</td>
-          <td id="prodDisPrice">-1,350원</td>
+          <td id="prodDisPrice">0원</td>
         </tr>
         <tr class="total__tr">
           <td>배송비</td>
@@ -107,23 +117,21 @@
         </tr>
         <tr class="total__tr">
           <td>포인트</td>
-          <td id="prodPoint">270</td>
+          <td id="prodPoint">0</td>
         </tr>
         <tr class="total__tr total__price-row">
           <td>전체 주문 금액</td>
-          <td id="prodTotalPrice" class="total__final-price">25,650원</td>
+          <td id="prodTotalPrice" class="total__final-price">0원</td>
         </tr>
       </table>
 
       <!-- 주문하기 버튼 -->
-      <form class="total__form" id="buyForm" method="GET" th:action="@{/product/order}">
+      <form id="orderForm" action="api/product/prepareOrder" method="post">
         <input type="submit" id="btnOrder" value="주문하기" class="total__form__submit" />
         <input type="hidden" name="user" id="userForDirect" />
         <input type="hidden" name="cartProdNo" id="selectedProd" />
       </form>
     </div>
-
   </div>
 </section>
-
 </html>
