--- a/src/main/resources/templates/company/content/media.html
+++ b/src/main/resources/templates/company/content/media.html
@@ -1,7 +1,11 @@
 <div class="content" th:fragment="media">
     <html xmlns:th="http://www.thymeleaf.org">
     <link rel="stylesheet" th:href="@{/css/company/company.css}">
-<!--내용 시작-->
+    <!--
+        날짜 : 2024/10/25
+        이름 : 박서홍
+        내용 : 회사소개 - media html 생성
+    -->
 <div class="headContent" >
     <div class="logoBox">
         <a th:href="@{/}"><img th:src="@{/images/header_logo.png}" alt="로고" style="width: 185px;"/></a>
