--- a/src/main/resources/templates/company/content/story.html
+++ b/src/main/resources/templates/company/content/story.html
@@ -1,7 +1,11 @@
 <div class="content" th:fragment="story">
     <html xmlns:th="http://www.thymeleaf.org">
 
-<!--내용 시작-->
+    <!--
+         날짜 : 2024/10/25
+         이름 : 박서홍
+         내용 : 회사소개 - story html 생성
+     -->
 
 <link rel="stylesheet" th:href="@{/css/company/company.css}">
 <div class="headContent" >
