--- a/src/main/resources/templates/company/layout/company_layout.html
+++ b/src/main/resources/templates/company/layout/company_layout.html
@@ -6,7 +6,11 @@
   <title>Title</title>
   <link rel="stylesheet" th:href="@{/css/company/company.css}" />
 </head>
-
+<!--
+     날짜 : 2024/10/25
+     이름 : 박서홍
+     내용 : 회사소개 - layout html 생성
+ -->
 <body>
 
 <!-- content -->
