--- a/src/main/resources/static/css/admin/include/admin_sidebar.css
+++ b/src/main/resources/static/css/admin/include/admin_sidebar.css
@@ -28,7 +28,7 @@
 }
 
 #admin_sidebar > li > a {
-    display: block;
+    /*display: block;*/
     width: 100%;
     height: 66px;
     font-size: 16px;
